# dot

./: .gitignore  .pylintrc  README.md  main.py  pyproject.toml
.github/workflows/: pylint.yml
adapters/: __init__.py  classifier.py  database.py
constants/: __init__.py  privs.py
ext/: .env.example  db.sql  nginx.example
objects/: post.py  preferences.py  user.py
routes/api/: __init__.py  accounts.py  auth.py  posts.py  preferences.py  users.py
routes/web/: __init__.py  frontend.py
state/: global_state.py
static/css/: base.css
static/js/: dashboard.js  feed.js  login.js  logout.js  main.js  profile.js  register.js
tables/: posts.py  user_preferences.py  users.py
templates/: 404.html  dashboard.html  feed.html  index.html  login.html  private_profile.html  profile.html  register.html
utils/: auth.py  settings.py
